RESOLVED FIXED277275
REGRESSION (281441@main): [ macOS iOS ] TestWebKitAPI.WKHTTPCookieStore.SameSiteWithPatternMatch is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=277275
Summary REGRESSION (281441@main): [ macOS iOS ] TestWebKitAPI.WKHTTPCookieStore.SameS...
Anfernee Viduya
Reported 2024-07-29 14:07:25 PDT
TestWebKitAPI.WKHTTPCookieStore.SameSiteWithPatternMatch is constantly failing. HISTORY: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WKHTTPCookieStore.SameSiteWithPatternMatch BUILD BOT URL: https://build.webkit.org/#/builders/947/builds/4884/steps/19/logs/stdio CRASH LOG: Expected: (requestView.find("Cookie: exists=1"_s)) != (notFound), actual: 18446744073709551615 vs 18446744073709551615
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-29 14:07:34 PDT
Anfernee Viduya
Comment 2 2024-07-29 14:09:39 PDT
REPRODUCIBILITY: I was able to bisect the regression and confirm that 281441@main is the commit that introduced the commit. run-api-tests 281441@main --debug -v
EWS
Comment 3 2024-07-29 15:05:03 PDT
Committed 281526@main (4f9c076b440e): <https://commits.webkit.org/281526@main> Reviewed commits have been landed. Closing PR #31410 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.