Cherry-pick 4f9c076b440e. rdar://132751900

REGRESSION (281441@main): [ macOS iOS ] TestWebKitAPI.WKHTTPCookieStore.SameSiteWithPatternMatch is a constant failure (277275)
    rdar://132751900
    https://bugs.webkit.org/show_bug.cgi?id=277275

    Reviewed by Matthew Finkel.

    We need to pass the page to FrameLoader::addSameSiteInfoToRequestIfNeeded

    * Source/WebCore/loader/cache/CachedResourceLoader.cpp:
    (WebCore::CachedResourceLoader::requestResource):

    Canonical link: https://commits.webkit.org/281526@main

Canonical link: https://commits.webkit.org/280938.165@safari-7619.1.26.10-branch